modificar detalles de html y css

--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
     <main>
         <section id="proyectos">
             <h2>Proyectos</h2>
-            <p>Aquí irán todos los proyectos</p>
+           <div class="proyecto">
+            <h3>Lionbeat</h3>
+            <p>Web estática desde cero, usando únicamente HTML5 y CSS3 como parte de mi formación. Me sirvió para repasar estructura semántica, estilos con Flexbox y diseño responsive.</p>
+            <a href="https://github.com/1997Ricardo/Lionbeat" target="_blank" rel="noopener">Ver en Github</a>
+           </div>
         </section>
 
         <section id="contacto">
             <h2>Contacto</h2>
-            <button onclick="mostrarAlerta()">Escribeme</button>
+            <p>Puedes escribirme a: <a href="mailto:ricardosunarodriguez@gmail.com">ricardosunarodriguez@gmail.com</a></p>
+            <p>O encontrarme en:
+                <a href="https://www.linkedin.com/in/ricardo-osuna-rodr%C3%ADguez-a48219227/" target="_blank" rel="noopener" >Linkedin</a>
+                <a href="https://github.com/1997Ricardo" target="_blank" rel="noopener">Github</a>
+            </p>
         </section>
     </main>
 
